--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,18 @@
-streamlit
-python-dotenv
-PyPDF2
-groq
+certifi
+chardet
 fpdf2
+groq
+numpy
+orjson
 pandas
-tiktoken
+plotly
+PyPDF2
+python-dateutil
+python-dotenv
+regex
 requests
+streamlit
+streamlit-lottie
+streamlit-option-menu
+tiktoken
+unicodedata2
